@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.8 =
 -------------------------------------------------
+* Fixed: Empty dashboard page when you are not enrolled.
 
 = 2.0.7 =
 -------------------------------------------------
